--- a/react_dev/src/fcc_react_projects/markdown_previewer/index.html
+++ b/react_dev/src/fcc_react_projects/markdown_previewer/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,9 +10,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
  
-    <title>Random Quote Machine</title>
+    <title>Markdown Previewer</title>
+    
 </head>
 
 <body>
-<div class="container" id="root"></div>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>  
+<div class="container" id="root">Hello World</div>
+
 </body>
