--- a/react_dev/src/fcc_react_projects/random_quote_machine/index.html
+++ b/react_dev/src/fcc_react_projects/random_quote_machine/index.html
@@ -1,3 +1,16 @@
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Web site created using create-react-app" />
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
+
+  <title>Random Quote Machine</title>
+</head>
+
 <body>
-    <div id='root'></div>
-      </body>
+<div class="container" id="root"></div>
+</body>
