--- a/react_dev/src/fcc_react_projects/pomodoro_clock_app/index.html
+++ b/react_dev/src/fcc_react_projects/pomodoro_clock_app/index.html
@@ -9,7 +9,8 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="./styles.css">
-    
+    <audio id="timer-beep" src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/audio/BeepSound.wav"></audio>
+
 
     <title>Pomodoro Clock</title>
 
@@ -17,7 +18,6 @@
 <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script type="text/babel" src="./index.js"></script>
-    
     <div id="root"></div>
 </body>
 </html>
