--- a/react_dev/src/fcc_react_projects/pomodoro_clock_app/index.html
+++ b/react_dev/src/fcc_react_projects/pomodoro_clock_app/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="./favicon.ico" />
 
-    <title>Pomodoro Clock</title>
+    <title>Pomodoro Timer</title>
 
 </head>
 <body>
