--- a/AI-Dev/chat_completions_with_openAI/index.html
+++ b/AI-Dev/chat_completions_with_openAI/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <script src="./index.js" type="module"></script>
+    <script src="./chunks.js" type="module"></script>
 </body>
 
 </html>
