AI chat stream with stop function

--- a/AI-Dev/chat_completions_with_openAI/index.html
+++ b/AI-Dev/chat_completions_with_openAI/index.html
@@ -21,11 +21,11 @@
             style="border: none; width: 100%; margin-bottom: 10px; background-color: #bdc3c7;">
         <div style="width: 100%; display: flex; justify-content: center;">
             <button class="btn btn-primary w-50" id="generateBtn" style="margin-right: 10px;">Go</button>
-            <button class="btn btn-secondary w-50" id="stopBtn">Stop</button>
+            <button class="btn btn-secondary w-50" id="stopBtn" disabled>Stop</button>
         </div>
     </div>
 
-    <script src="./chunks.js" type="module"></script>
+    <script src="./withStopBtn.js" type="module"></script>
 </body>
 
 </html>
